<resources>
    <string name="app_name">Life scheduler</string>
    <string name="app_auth">Log in or sign up</string>
    <string name="app_bottom">by dev0</string>
    <string name="buttonSignIn">Sign in</string>
    <string name="buttonRegister">Sign up</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>

    <string name="title_tasks">Tasks</string>
    <string name="title_activities">Activities</string>
    <string name="title_records">Records</string>
    <string name="title_together" translatable="false">Together</string>
    <string name="title_settings">Settings</string>

    <string name="title_task_type_lax">Lax</string>
    <string name="title_task_type_strict">Strict</string>

    <string name="title_task_time">Time</string>
    <string name="title_task_date">Date</string>
    <string name="title_task_add" translatable="false">>></string>

    <string name="done_btn">Done</string>
    <string name="edit_btn">Edit</string>
    <string name="clear_btn">Clear</string>

    <string name="save_btn">Save</string>
    <string name="delete_btn">Delete</string>
    <string name="set_btn">Set</string>
    <string name="start_btn">Start</string>
    <string name="reset_btn">Reset</string>
    <string name="pause_btn">Pause</string>

    <string name="hint_minutes">Minutes</string>
    <string name="hint_zero_time" translatable="false">00:00</string>
    <string name="hint_input_act_name">Input activity name</string>
    <string name="hint_input_act_description">Input activity description</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_enter_data">Enter data for registration</string>
    <string name="dialog_add">Add</string>

    <string name="snackbar_enter_email">Enter email</string>
    <string name="snackbar_password_short">Password length should be not less than 6 symbols</string>
    <string name="snackbar_authorization_error">Authorization error! </string>
    <string name="snackbar_enter_name">Enter name</string>
    <string name="snackbar_enter_phone">Enter phone number</string>
    <string name="snackbar_user_added">User added!</string>
    <string name="snackbar_registration_error">Registration error! </string>
</resources>
